將右上 User 移到 layout

--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -11,7 +11,14 @@
   </head>
 
   <body>
-
+    <!-- 頂部 nav -->
+    <nav class="btn-user">
+      <a href="https://2022.thef2e.com/users"></a>
+    </nav>
+    <!-- 側邊 nav -->
+    <nav>
+      
+    </nav>
     <%- contents %>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
