--- a/app/assets/style/component/_bgImg.scss
+++ b/app/assets/style/component/_bgImg.scss
@@ -3,7 +3,7 @@
   background: url('../images/main/start.png') no-repeat center center;
   background-size: 80% 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 0;
   height: 100vh;
   width: 100%;
   // background-attachment: fixed;
@@ -32,19 +32,19 @@
     width: 16.5%;
   }
 
-  &__r {
+  &-r {
     position: absolute;
     top: 28%;
     left: 13%;
   }
 
-  &__y {
+  &-y {
     position: absolute;
     top: 28%;
     left: 37%;
   }
 
-  &__g {
+  &-g {
     position: absolute;
     right: 23.5%;
     top: 28%;
@@ -67,7 +67,7 @@
   bottom: 0;
   left: 10px;
 
-  &__now {
+  &-now {
     position: absolute;
     left: 2px;
     top: 31%;
@@ -78,19 +78,19 @@
 .bg-runner {
   position: relative;
   z-index: 3;
-  &__f2e {
+  &-f2e {
     position: fixed;
     bottom: 10px;
     left: 19%;
     width: 15%;
   }
-  &__ui {
+  &-ui {
     position: fixed;
     bottom: 10px;
     left: 42%;
     width: 16%;
   }
-  &__team {
+  &-team {
     position: fixed;
     bottom: 10px;
     right: 20%;
@@ -100,14 +100,14 @@
 // 雲朵
 .bg-cloud-left {
   position: fixed;
-  z-index: 0;
+  z-index: -1;
   left: 5%;
-  top: 45%;
+  top: 43%;
   width: 25%;
 }
 .bg-cloud-right {
   position: fixed;
-  z-index: 0;
+  z-index: -1;
   right: 5%;
   top: 48%;
   width: 25%;
