--- a/app/assets/style/component/_bgImg.scss
+++ b/app/assets/style/component/_bgImg.scss
@@ -10,44 +10,44 @@
 }
 // 紅綠燈
 .bg-ready {
-  background: url('../images/main/ready_frame.png') no-repeat center center ;
-  background-size: cover;
   position: fixed;
   z-index: 1;
   right: 0;
   top: 50%;
   width: 15%;
   height: 10%;
-  
-  &::before {
-    content: 'READY?';
-    color: $highlight;
-    font-size: 32px;
+
+  &-frame {
+    position: relative;
+    width: 100%;
+    z-index: 1;
+  }
+
+  &-text {
     position: absolute;
     top: -55%;
     left: 16%;
   }
 
-  > img {
-    width: 16.5%;
-  }
-
   &-r {
     position: absolute;
-    top: 28%;
+    top: 32%;
     left: 13%;
+    width: 17%;
   }
 
   &-y {
     position: absolute;
-    top: 28%;
-    left: 37%;
+    top: 31%;
+    left: 36%;
+    width: 18%;
   }
 
   &-g {
     position: absolute;
-    right: 23.5%;
-    top: 28%;
+    right: 23%;
+    top: 32%;
+    width: 18%;
   }
 }
 // 跑道
